--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 					<a href="#">Pricing</a>
 					<a href="#">Reviews</a>
 					<a href="#">Contact</a>
-					<div class="fab fa-500px"></div>
 		 		</div>
 			</div>
 			<div class="header_inside">
@@ -49,6 +48,7 @@
 					<input type="submit" value="Get Started" class="get_started">
 				</div>
 			</div>
+			</header>
 		</div>
 	</header>
 	<div class="brand_bar">
