--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="header_inside">
 				<div class="inside_block_first">
 					<img src="image/big_logo.jpg" alt="">
-					<h1>MODERN AXURE TEMPLATE </br> FOR BEAUTIFUL PROTOTYPES</h1>
+					<h1>MODERN AXURE TEMPLATE <br> FOR BEAUTIFUL PROTOTYPES</h1>
 					<div class="line">a</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur atque, recusandae similique qui, ut id, assumenda autem iure, illo impedit sequi vitae facere.</p>
 					<input type="button" name="download" value="Download" class="download_button">
@@ -41,14 +41,13 @@
 						Try Your <span class="up_span">FREE</span> Trial Today
 					</div>
 					<div class="trial">
-						<input type="text" name="name" value="" placeholder="Name" class="trial-free" >
-						<input type="email" name="name" value="" placeholder="Email" class="trial-free">
-						<input type="password" name="name" value="" placeholder="Password" class="trial-free">
+						<input type="text" name="name" value="" placeholder="Name" class="trial_free">
+						<input type="email" name="name" value="" placeholder="Email" class="trial_free ">
+						<input type="password" name="name" value="" placeholder="Password" class="trial_free">
 					</div>
 					<input type="submit" value="Get Started" class="get_started">
 				</div>
 			</div>
-			</header>
 		</div>
 	</header>
 	<div class="brand_bar">
