--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@600&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="null.css">
@@ -58,34 +58,41 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta tempore alias aliquam.</p>
 				</div>
 				<div class="brand_column_second">
-					<a href="#" title="Google Plus"><i class="fab fa-google-plus-g"></i></a>
-					<a href="#" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
-					<a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-					<a href="#" title="Viber"><i class="fab fa-viber"></i></a>
-					<a href="#" title="Messenger"><i class="fab fa-facebook-messenger"></i></a>
 					<a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
 					<a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
+					<a href="#" title="Pinterest"><i class="fab fa-pinterest"></i></a>
+					<a href="#" title="Viber"><i class="fab fa-viber"></i></a>
+					<a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
+					<a href="#" title="Messenger"><i class="fab fa-facebook-messenger"></i></a>
+					<a href="#" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="features">
-		<div class="conteiner">
-			<div class="feature_first">
-				<div class="feature_first_left">
-					<button type="button" name="TAB1">TAB 1</button>
-					<button type="button" name="TAB2">TAB 2</button>
-					<button type="button" name="TAB2">TAB 3</button>
+		<div class="feature_first">
+			<div class="conteiner">
+				<div class="feature_first_inside">
+					<div class="feature_first_left">
+						<button type="button" name="TAB1">TAB 1</button>
+						<button type="button" name="TAB2">TAB 2</button>
+						<button type="button" name="TAB2">TAB 3</button>
+					</div>
+					<div class="feature_first_center">
+						<h3>Tabs with soft transitioning effect.</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam excepturi eius nam dolorum tempore libero labore dolores blanditiis in aspernatur! Aliquam laudantium, deserunt nemo enim, accusamus aliquid dolorem maxime! Non?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nobis adipisci mollitia.</p>
+						<input type="button" name="download_tab" value="Download">
+					</div>
+					<div class="feature_first_right">
+						<img src="image/feature-one.jpg" alt="">
+					</div>
 				</div>
-				<div class="feature_first_center">
-					<h3>Tabs with soft transitioning effect.</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam excepturi eius nam dolorum tempore libero labore dolores blanditiis in aspernatur! Aliquam laudantium, deserunt nemo enim, accusamus aliquid dolorem maxime! Non?</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore nobis adipisci mollitia.</p>
-					<input type="button" name="download_tab" value="Download">
-				</div>
-				<div class="feature_first_right">
-
-				</div>
+			</div>
+		</div>
+		<div class="feature_second">
+			<div class="conteiner">
+				
 			</div>
 		</div>
 	</div>
